--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,5 +14,19 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mt-5 mb-5">
+            <div class="card shadow-effect">
+                <div
+                    class="card-body text-center bg-secondary-theme router"
+                    routerLink="/posts"
+                >
+                    <h1 class="mt-3 text-theme-primary">
+                        <i class="fa-solid fa-file-image"></i>
+                    </h1>
+                    <h2 class="text-theme-primary">All-Posts</h2>
+                    <p>Manage your Post Details here</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
