Design of the login form is Done. The behaviour is yet to be addded.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,55 +2,56 @@
 @import "~ngx-toastr/toastr";
 
 :root {
-    --primary-color: #026467;
-    --secondary-color: #e5f5ea;
-    --body-text-color: #596392;
-    --navbar-footer-color: #f9f9f9;
+  --primary-color: #026467;
+  --secondary-color: #e5f5ea;
+  --body-text-color: #596392;
+  --navbar-footer-color: #f9f9f9;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    font-size: 14px;
-    color: var(--body-text-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: var(--body-text-color);
 }
 
 .site-logo {
-    padding: 5px 20px;
-    border-radius: 20px;
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+  padding: 5px 20px;
+  border-radius: 20px;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
 .nav-link {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .shadow-effect {
-    border: none;
-    box-shadow: 0px 0px 50px -10px rgba(71, 114, 254, 0.3);
+  border: none;
+  box-shadow: 0px 0px 50px -10px rgba(71, 114, 254, 0.3);
 }
 
 input[type="text"],
-input[type="email"] {
-    height: 60px;
-    padding: 20px;
-    font-size: 13px;
-    width: 100%;
+input[type="email"],
+input[type="password"] {
+  height: 60px;
+  padding: 20px;
+  font-size: 13px;
+  width: 100%;
 }
 
 .btn-theme {
-    height: 58px;
-    background-color: var(--primary-color);
-    border: none;
+  height: 58px;
+  background-color: var(--primary-color);
+  border: none;
 }
 
 .background-theme {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 .bg-secondary-theme {
-    background-color: var(--secondary-color);
+  background-color: var(--secondary-color);
 }
 
 .text-theme-primary {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
