--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,5 +1,15 @@
 <header class="navbar navbar-expand-lg fixed-top bg-light">
-    <div class="container justify-content-center">
-        <a href="#" class="site-logo">ANG-BLOG</a>
-    </div>
+  <div class="container justify-content-center">
+    <a href="#" class="site-logo">ANG-BLOG</a>
+  </div>
+
+  <div *ngIf="isLoggedIn$ | async" class="container justify-content-center">
+    <a href="#" class="mr-3">{{ this.userEmail }}</a>
+    <button
+      class="btn btn-info btn-sm bg-secondary-theme text-theme-primary"
+      (click)="onLogOut()"
+    >
+      Logout
+    </button>
+  </div>
 </header>
